k8s/apps/games/minecraft/trailing-slash-middleware.k8s.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.containo.us/middleware_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: addtrailingslash
  namespace: minecraft
spec:
  redirectRegex:
    regex: ^(https?://[^/]+(/[a-z0-9_]+){2})$$
    replacement: $${1}/
    permanent: true
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.containo.us/middleware_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: minecraft
spec:
  stripPrefixRegex:
    regex: 
      - (/[a-z0-9_]+){2}
