k8s/apps/games/minecraft/infrared.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infrared
  namespace: minecraft
  labels:
    app: infrared
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infrared
  template:
    metadata:
      labels:
        app: infrared
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: infrared
          image: docker.io/haveachin/infrared:2.0.0-alpha.13
          args: ["-c", "config.yaml"]
          securityContext:
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 25565
            - containerPort: 19132
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /infrared
            - name: plugins
              mountPath: /infrared/plugins
            - name: targets
              mountPath: /infrared/proxies
            - name: icons
              mountPath: /infrared/icons
      volumes:
        - name: config
          configMap:
            name: infrared-config
        - name: plugins
          configMap:
            name: infrared-plugins
        - name: targets
          configMap:
            name: infrared-targets
        - name: icons
          configMap:
            name: infrared-icons
---
apiVersion: v1
kind: Service
metadata:
  name: infrared
  namespace: minecraft
spec:
  type: ClusterIP
  selector:
    app: infrared
  ports:
    - name: minecraft-java
      protocol: TCP
      port: 25565
      targetPort: 25565
    - name: minecraft-bedrock
      protocol: UDP
      port: 19132
      targetPort: 19132
