k8s/apps/games/minecraft/infrared.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infrared
  namespace: minecraft
  labels:
    app: infrared
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infrared
  template:
    metadata:
      labels:
        app: infrared
    spec:
      containers:
        - name: infrared
          image: docker.io/haveachin/infrared:2.0.0-alpha.13
          args: ["-c", "config.yaml"]
          ports:
            - containerPort: 25565
          volumeMounts:
            - name: config
              mountPath: /infrared
            - name: plugins
              mountPath: /infrared/plugins
            - name: targets
              mountPath: /infrared/proxies
            - name: icons
              mountPath: /infrared/icons
      volumes:
        - name: config
          configMap:
            name: infrared-config
        - name: plugins
          configMap:
            name: infrared-plugins
        - name: targets
          configMap:
            name: infrared-targets
        - name: icons
          emptyDir:
            sizeLimit: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: infrared
  namespace: minecraft
spec:
  selector:
    app.kubernetes.io/name: infrared
  ports:
    - protocol: TCP
      port: 25565
      targetPort: 25565
