k8s/apps/games/minecraft/ingress-routes.k8s.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroutetcp_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mc-router-external
  namespace: minecraft
  annotations:
    kubernetes.io/ingress.class: ingress-external-traefik
spec:
  entryPoints:
    - mc-java
  routes:
    - match: HostSNI(`*`)
      services:
        - name: minecraft-mc-router
          port: 25565
          proxyProtocol:
            version: 2
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroutetcp_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mc-router-internal
  namespace: minecraft
  annotations:
    kubernetes.io/ingress.class: ingress-internal-traefik
spec:
  entryPoints:
    - mc-java
  routes:
    - match: HostSNI(`*`)
      services:
        - name: minecraft-mc-router
          port: 25565
          proxyProtocol:
            version: 2
